<resources>
    <string name="app_name" translatable="false">openWorkout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_trainings">Trainings</string>
    <string name="menu_trainingsdatabase">Training item database</string>
    <string name="menu_sessions">Sessions</string>
    <string name="menu_workout">Workout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_trophy">Trophy</string>
    <string name="menu_workoutslide">Workout slide</string>
    <string name="menu_workoutsettings">Workout settings</string>
    <string name="menu_workoutdatabase">Workout item database</string>
    <string name="menu_billing">Billing</string>
    <string name="preference_reminder_general">General</string>
    <string name="preference_reminder_title">Reminder</string>
    <string name="preference_enable_dark_theme">Dark theme mode</string>
    <string name="preference_reminder">Reminder</string>
    <string name="preference_reminder_days">Days</string>
    <string name="preference_reminder_time">Time</string>
    <string name="preference_reminder_text">Notification text</string>
    <string name="preference_reminder_default_text">Time for your workout</string>
    <string name="preference_enable_debug_logging">Enable debug logging</string>
    <string name="preference_remove_advertisements">Remove advertisements</string>
    <string name="preference_sound">Sound</string>
    <string name="preference_speech_countdown">Speech countdown</string>
    <string name="preference_speech_workout_state">Speech workout state</string>
    <string name="label_info_remove_permanently">Pay once and remove permanently any advertising from openWorkout</string>
    <string name="label_info_purchase_for">Purchase now for %s</string>
    <string name="label_pending_purchase">You have a pending purchase, please complete the purchase order %s</string>
    <string name="label_already_purchased">You already purchased it</string>
    <string name="label_successful_purchased">Successful purchased</string>
    <string name="label_purchase_canceled">Purchase canceled</string>
    <string name="label_purchase_unexpected_error">Unexpected error abort purchasing</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="seconds_unit">s</string>
    <string name="day_unit">%d. day</string>
    <string name="label_session_size_completed">%d of %d sessions completed</string>
    <string name="label_repetition_info">%d x %s repetition</string>
    <string name="label_repetition_item_info">%dx repetition</string>
    <string name="label_work_duration_item_info">%d s work duration</string>
    <string name="label_break_duration_item_info">%d s break</string>
    <string name="label_prep_duration_item_info">%d s preparation</string>
    <string name="label_congratulation">Congratulations!</string>
    <string name="label_info_finished_session">You finished your session in</string>
    <string name="label_start">Start</string>
    <string name="label_break">Take a break</string>
    <string name="label_prepare">Prepare your workout</string>
    <string name="label_workout">Do your workout</string>
    <string name="speak_next_workout">Your next workout is</string>
    <string name="speak_halftime">halftime</string>
    <string name="speak_five">five</string>
    <string name="speak_four">four</string>
    <string name="speak_three">three</string>
    <string name="speak_two">two</string>
    <string name="speak_one">one</string>
    <string name="label_about">About</string>
    <string name="label_about_info" translatable="false">Copyright (C) 2020 olie.xdev@googlemail.com\n\nThis program is free software: you can redistribute it and/or modify\nit under the terms of the GNU General Public License as published by\nthe Free Software Foundation, either version 3 of the License, or\n(at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,\nbut WITHOUT ANY WARRANTY; without even the implied warranty of\nMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\nGNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License\nalong with this program.  If not, see http://www.gnu.org/licenses/</string>
    <string name="label_help">Help</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    <string name="label_edit">Edit</string>
    <string name="label_reset">Reset</string>
    <string name="label_delete">Delete</string>
    <string name="label_export_local">Export</string>
    <string name="label_publish">Publish</string>
    <string name="label_publish_message">For publishing your training plan, please save and upload the exported training file via a pull request on the <![CDATA[<a href="https://github.com/oliexdev/openWorkout">openWorkout GitHub</a>]]> project page.
        <![CDATA[<br><br>]]>
        For more information visit the <![CDATA[<a href="https://github.com/oliexdev/openWorkout/wiki">openWorkout wikipage</a>]]>.</string>
    <string name="label_add">Add</string>
    <string name="label_add_session">Add new session</string>
    <string name="label_add_training">Add new training</string>
    <string name="label_add_workout">Add new workout</string>
    <string name="label_add_from_database">Add from database</string>
    <string name="label_duplicate">Duplicate</string>
    <string name="label_training_plans">training plans</string>
    <string name="label_add_toast">%s added</string>
    <string name="label_delete_toast">%s deleted</string>
    <string name="label_reset_toast">%s reset</string>
    <string name="label_save_toast">%s saved</string>
    <string name="label_package_size_mbytes">%s MBytes package size</string>
    <string name="label_package_size_kbytes">%s kBytes package size</string>
    <string name="label_new_training_plan">New training plan</string>
    <string name="label_new_workout_item">New workout item</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_preparation_time">Preparation time</string>
    <string name="label_workout_time">Workout time</string>
    <string name="label_break_time">Break time</string>
    <string name="label_repetition_count">Repetition count</string>
    <string name="label_time_mode">Time mode</string>
    <string name="label_video_mode">Video mode</string>
    <string name="label_video">Video</string>
    <string name="label_image">Image</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_select_image_file">Select an image file</string>
    <string name="label_select_video_file">Select a video file</string>
    <string name="label_select_export_file">Export openWorkout training package</string>
    <string name="label_select_import_file">Import openWorkout training package</string>
    <string name="label_select_debug_file">Save debug file</string>
    <string name="label_local_import">Local import</string>
    <string name="label_cloud_import">Cloud import</string>
    <string name="label_info_exported">Training plan %s exported to %s</string>
    <string name="label_info_imported">Training plan %s imported from %s</string>
    <string name="label_input_create_days">How many sessions do you want to insert?</string>
    <string name="label_really_reset_dialog">Do you really want to reset the status of all items?</string>
    <string name="error_no_trainings">No workout trainings found. Please create a workout training.</string>
    <string name="error_no_sessions">No workout session in %s found. Please create a workout session.</string>
    <string name="error_no_workout_items">No workout item in %s found. Please create a workout item.</string>
    <string name="error_empty_text">field can\'t be empty</string>
    <string name="error_no_github_connection">Can\'t connect to GitHub API, make sure you are online</string>
    <string name="error_no_github_download">Can\'t download file via GitHub API</string>
    <string name="error_no_valid_training_package">%s is not a valid training package</string>
    <string name="error_no_access_to_file">Can\'t access file</string>
    <string name="workout_name_jumping_jack">Jumping jack</string>
    <string name="workout_name_wall_sit">Wall sit</string>
    <string name="workout_name_push_ups">Push-up</string>
    <string name="workout_name_abdominal_crunch">Abdominal crunch</string>
    <string name="workout_name_step_up">Step-up</string>
    <string name="workout_name_squat">Squat</string>
    <string name="workout_name_triceps_dip">Triceps dip</string>
    <string name="workout_name_plank">Plank</string>
    <string name="workout_name_high_knees">High knees</string>
    <string name="workout_name_lunge">Lunge</string>
    <string name="workout_name_push_up_rotation">Push-up rotation</string>
    <string name="workout_name_side_plank">Side plank</string>
    <string name="workout_name_cross_jump_rotation">Cross jump rotation</string>
    <string name="workout_name_quick_steps">Quick steps</string>
    <string name="workout_name_jump_push_ups">Jump push-up</string>
    <string name="workout_name_bicycle_crunch">Bicycle crunch</string>
    <string name="workout_name_burpee">Burpee</string>
    <string name="workout_name_box_jump">Box jump</string>
    <string name="workout_name_circle_crunch">Circle crunch</string>
    <string name="workout_name_pike_walk">Pike walk</string>
    <string name="workout_name_cross_jump">Cross jump</string>
    <string name="workout_name_air_squad_bent_arms">Air squad bent arms</string>
    <string name="workout_name_lunge_kick">Lunge kick</string>
    <string name="workout_name_mountain_climbers">Mountain climber</string>
    <string name="workout_name_russian_twist">Russian twist</string>
    <string name="workout_name_donkey_kick">Donkey kick</string>
    <string name="workout_description_jumping_jack">Stand up with your legs spread and your hands touching overhead. Then as you jump, bring your legs back together and put your arms to your sides. You can speed these up or slow them down to suit your fitness level.</string>
    <string name="workout_description_wall_sit">Stand with your back to a wall, feet hip-width apart and slightly in front of you. Lean back into the wall, and slide down like you’re sitting down into a chair. Your knees should finish above your ankles, bent at 90 degrees.</string>
    <string name="workout_description_push_ups">Get into a "plank" position on the floor or mat, feet together with toes tucked under, hands planted flat below your shoulders. Slowly bend your elbows and lower your body toward the floor, as far down as you can go keeping back and hips level. Then press back up and repeat.</string>
    <string name="workout_description_abdominal_crunch">Start with a basic crunch: Lie flat on your back, with your knees bent and feet on floor. Tighten your core. Press your lower back into the mat and reach toward top of knees. Return to starting position but keep core tight and repeat.</string>
</resources>