<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 olie.xdev <olie.xdev@googlemail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="reminderEnable"
        app:title="@string/preference_reminder"/>

    <MultiSelectListPreference
        app:defaultValue="@array/days_default"
        app:dependency="reminderEnable"
        app:dialogTitle="@string/preference_reminder_days"
        app:entries="@array/days_entries"
        app:entryValues="@array/days_values"
        app:key="reminderDays"
        app:title="@string/preference_reminder_days" />

    <com.health.openworkout.gui.preference.TimePreference
        app:dependency="reminderEnable"
        app:key="reminderTime"
        app:defaultValue="0"
        app:title="@string/preference_reminder_time"
        style="@style/AppPreference.DialogPreference" />

    <EditTextPreference
        app:defaultValue="@string/preference_reminder_default_text"
        app:dependency="reminderEnable"
        app:key="reminderNotifyText"
        app:useSimpleSummaryProvider="true"
        app:title="@string/preference_reminder_text" />
</PreferenceScreen>
