<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 olie.xdev <olie.xdev@googlemail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="darkTheme"
        app:title="@string/preference_enable_dark_theme"
        app:icon="@drawable/ic_dark_mode"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="false"/>

    <SwitchPreferenceCompat
        app:key="debugLogging"
        app:title="@string/preference_enable_debug_logging"
        app:icon="@drawable/ic_debug_logging"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="false"/>

    <Preference
        app:key="reminder"
        app:icon="@drawable/ic_reminder"
        app:title="@string/preference_reminder" />

    <Preference
        app:key="removeAd"
        app:icon="@drawable/ic_billing"
        app:title="@string/preference_remove_advertisements" />

</PreferenceScreen>
